--- a/platform-api/che-core-api-account/pom.xml
+++ b/platform-api/che-core-api-account/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-api-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.11.9</version>
+        <version>3.11.9.1-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-account</artifactId>
     <name>Che Core :: API :: Account</name>
