--- a/platform-api/che-core-api-builder/pom.xml
+++ b/platform-api/che-core-api-builder/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-api-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.12.1</version>
+        <version>3.12.2-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-builder</artifactId>
     <packaging>jar</packaging>
