--- a/platform-api/che-core-api-git/pom.xml
+++ b/platform-api/che-core-api-git/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-api-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.12.2</version>
+        <version>3.12.3-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-git</artifactId>
     <packaging>jar</packaging>
