--- a/platform-api/che-core-api-infrastructure-local/pom.xml
+++ b/platform-api/che-core-api-infrastructure-local/pom.xml
@@ -44,7 +44,7 @@
         <!--<dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-factory</artifactId>
-            <version>${che.core.version}</version>
+            <version>${project.version}</version>
         </dependency>-->
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
