--- a/platform-api-client-gwt/che-core-client-gwt-git/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-git/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-client-gwt-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>4.0.0-M1</version>
+        <version>4.0.0-M2-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-client-gwt-git</artifactId>
     <packaging>jar</packaging>
