--- a/commons/che-core-commons-inject/pom.xml
+++ b/commons/che-core-commons-inject/pom.xml
@@ -21,6 +21,9 @@
     <artifactId>che-core-commons-inject</artifactId>
     <packaging>jar</packaging>
     <name>Che Core :: Commons :: Dependency Injecting</name>
+    <properties>
+        <findbugs.failonerror>true</findbugs.failonerror>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
