--- a/commons/che-core-commons-lang/pom.xml
+++ b/commons/che-core-commons-lang/pom.xml
@@ -22,7 +22,7 @@
     <packaging>jar</packaging>
     <name>Che Core :: Commons :: Java API extension classes</name>
     <properties>
-        <findbugs.excludeFilterFiler>${project.build.testSourceDirectory}/../resources/findbugs-exclude.xml</findbugs.excludeFilterFiler>
+        <findbugs.excludeFilterFile>${project.build.testSourceDirectory}/../resources/findbugs-exclude.xml</findbugs.excludeFilterFile>
         <findbugs.failonerror>true</findbugs.failonerror>
     </properties>
     <dependencies>
