--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -267,4 +267,4 @@ ext.server.started=Extension server started...
 ext.server.stopped=Extension server stopped...
 workspace.start.failed=Workspace {0} starting is failed.
 start.ws.error.title=Start Workspace Error
-start.ws.error.content=Workspace {0} failed to start. Try restarting it, start existing workspace or create a new one
+start.ws.error.content=Workspace {0} failed to start. The reason: {1}. Try restarting it, start existing workspace or create a new one.
