--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -207,6 +207,12 @@ project.settings.title=Settings
 stop.ws.title=Stop Workspace
 stop.ws.description=Stop current workspace
 
+############## Create workspace's snapshot action ##########
+create.snapshot.title=Create Snapshot
+create.snapshot.description=Creates snapshot of workspace
+create.snapshot.progress=Creating snapshot...
+create.snapshot.success=Snapshot successfully created
+
 ############## Get workspace #############
 get.ws.error.dialog.title=Error
 get.ws.error.dialog.content=Can not get workspaces. The reason: {0}.
