--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>ide</module>
         <module>che-core-vfs-impl</module>
         <module>che-core-git-impl-native</module>
+        <module>che-core-git-impl-jgit</module>
         <module>che-core-git-server</module>
     </modules>
     <scm>
