--- a/che-core-git-impl-native/pom.xml
+++ b/che-core-git-impl-native/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.14.1</version>
+        <version>3.14.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-git-impl-native</artifactId>
