--- a/platform-api/che-core-api-project/pom.xml
+++ b/platform-api/che-core-api-project/pom.xml
@@ -45,10 +45,10 @@
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-multibindings</artifactId>
         </dependency>
-        <!-- dependency>
+        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
-        </dependency -->
+        </dependency>
 
         <dependency>
             <groupId>commons-io</groupId>
