--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - export M2_HOME=$PWD/apache-maven-3.3.9
   - export PATH=$M2_HOME/bin:$PATH
   - export MAVEN_OPTS="$MAVEN_OPTS -Xmx192m"
+  - echo $MAVEN_OPTS
 
 install: true
 
