--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ before_install:
   - unzip -qq apache-maven-3.3.9-bin.zip
   - export M2_HOME=$PWD/apache-maven-3.3.9
   - export PATH=$M2_HOME/bin:$PATH
-  - export MAVEN_OPTS="$MAVEN_OPTS -Xmx192m"
   - echo $MAVEN_OPTS
+  - echo $JAVA_OPTIONS
+  - echo $JAVA_OPTS
 
 install: true
 
