--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
 language: java
 
+before_install:
+  - wget https://archive.apache.org/dist/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.zip
+  - unzip -qq apache-maven-3.3.9-bin.zip
+  - export M2_HOME=$PWD/apache-maven-3.3.9
+  - export PATH=$M2_HOME/bin:$PATH
+
 jdk:
   - oraclejdk8
 
 branches:
   only:
-    - 3.x
+# disable until maven version issue is solved in ci
+#   - 3.x
+    - master
 
 sudo: false
 
